added synthetic datasets

--- a/code/results-analysis.ipynb
+++ b/code/results-analysis.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = datasets_load[dataset_name]()\n",
+    "data = datasets_load[dataset_name]\n",
     "n_classes = len(data['target_names'])\n",
     "print('Number of classes {}'.format(n_classes))"
    ]
@@ -127,6 +127,33 @@
     "print(y)\n",
     "plt.bar(x, y)\n",
     "plt.title('Distribution between classes for {} dataset'.format(dataset_name))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization for synthetic datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if dataset_name.startswith('gen'):\n",
+    "    col_arr = ['r', 'g', 'y', 'b']\n",
+    "    for i in range(0,4):\n",
+    "        # plot every 5th point to see something\n",
+    "        plt.scatter(data['data'].T[0][i*2000: (i+1)*2000][::5], \n",
+    "                    data['data'].T[1][i*2000: (i+1)*2000][::5], s=1,\n",
+    "                    c=col_arr[i]\n",
+    "                    )\n",
+    "    plt.title('$\\sigma=1.0$')\n",
+    "    plt.grid(True)\n",
+    "    #tikzplotlib.save('../paper/sample-papers/plots/{}-class-visualization.tex'.format(\n",
+    "    #    dataset_name.replace('.', '').replace('_', '-')))"
    ]
   },
   {
